--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profil | Jehuda Rapha P.H</title>
+    <title>Profile | Jehuda Rapha P.H.</title>
     <link rel="stylesheet" href="assets/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,33 +11,33 @@
 <body>
     <header>
         <div class="jumbotron" onclick="goToHome()">
-            <h1>Profil Jehuda</h1>
-            <p>Selamat datang di halaman portofolio saya!</p>
+            <h1>Profile Jehuda</h1>
+            <p>Welcome to my portfolio page!</p>
         </div>
         <nav id="navbar" aria-label="Navigasi Utama">
             <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
             <ul>
-                <li><a href="#tentang-saya">Tentang Saya</a></li>
-                <li><a href="#galeri-proyek">Galeri Proyek</a></li>
-                <li><a href="#kontak-saya">Kontak Saya</a></li>
-                <li><a href="#data-diri-saya">Data Diri Saya</a></li>
-                <li><a href="#media-sosial-saya">Media Sosial Saya</a></li>
+                <li><a href="#tentang-saya">About Me</a></li>
+                <li><a href="#galeri-proyek">Project Gallery</a></li>
+                <li><a href="#kontak-saya">Contact Me</a></li>
+                <li><a href="#data-diri-saya">My Personal Data</a></li>
+                <li><a href="#media-sosial-saya">My Social Media</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="main-content">
             <section id="tentang-saya" class="card">
-                <h2>Tentang Saya</h2>
-                <p>Saya adalah seorang pengembang web yang sedang belajar dan mengeksplorasi dunia pemrograman. Saya memiliki ketertarikan dalam menciptakan aplikasi web yang menarik dan fungsional.</p>
+                <h2>About Me</h2>
+                <p>I am a web developer who is currently learning and exploring the world of programming. I have an interest in creating attractive and functional web applications.</p>
             </section>
             <section id="galeri-proyek" class="card">
-                <h2>Galeri Proyek</h2>
+                <h2>Project Gallery</h2>
                 <div class="dropdown">
-                    <button class="dropbtn" onclick="toggleDropdown()" aria-haspopup="true" aria-expanded="false">Pilih Proyek</button>
+                    <button class="dropbtn" onclick="toggleDropdown()" aria-haspopup="true" aria-expanded="false">Select Project</button>
                     <div class="dropdown-content" id="dropdown-content">
-                        <a href="#" onclick="showProject(event, 'proyek1')">Proyek 1</a>
-                        <a href="#" onclick="showProject(event, 'proyek2')">Proyek 2</a>
+                        <a href="#" onclick="showProject(event, 'proyek1')">Project 1</a>
+                        <a href="#" onclick="showProject(event, 'proyek2')">Project 2</a>
                     </div>
                 </div>
                 <div id="project-display" class="project-display">
@@ -45,8 +45,8 @@
                 </div>
             </section>
             <section id="kontak-saya" class="card">
-                <h2>Kontak Saya</h2>
-                <p>Anda dapat menghubungi saya melalui:</p>
+                <h2>Contact Me</h2>
+                <p>You can contact me through:</p>
                 <ul>
                     <li>Email: <a href="mailto:jehudarapha653@email.com">jehudarapha653@email.com</a></li>
                     <li>Telepon: <a href="https://api.whatsapp.com/send?phone=6281278915745"> +62 812-7891-5745</a></li>
@@ -55,7 +55,7 @@
         </div>
         <aside>
             <article id="data-diri-saya" class="data-diri card">
-                <h2>Data Diri Saya</h2>
+                <h2>My Personal Data</h2>
                 <div class="slider">
                     <img src="assets/image/Photo Jehuda.jpg" alt="Foto Jehuda Rapha Putra Hermantan" class="profile-photo" id="sliderImage" />
                     <div class="slider-buttons">
@@ -64,14 +64,14 @@
                     </div>
                 </div>
                 <ul>
-                    <li><b>Nama:</b> Jehuda Rapha Putra Hermantan</li>
-                    <li><b>Umur:</b> 17 Tahun</li>
-                    <li><b>Lokasi:</b> Palembang, Indonesia</li>
-                    <li><b>Status:</b> Pelajar</li>
+                    <li><b>Name:</b> Jehuda Rapha Putra Hermantan</li>
+                    <li><b>Age:</b> 17 Years Old</li>
+                    <li><b>Location:</b> Palembang, Indonesia</li>
+                    <li><b>Status:</b> Vocational High School Graduate</li>
                 </ul>
             </article>
             <article id="media-sosial-saya" class="social-media card">
-                <h2>Media Sosial Saya</h2>
+                <h2>My Social Media</h2>
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/jehuda_rapha/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram" aria-hidden="true"></i> Instagram</a>
@@ -81,7 +81,7 @@
         </aside>
     </main>
     <footer>
-        <p>&copy; 2024 Portofolio Jehuda. Karya oleh Jehuda Rapha Putra Hermantan.</p>
+        <p>&copy; 2025 Jehuda's Portfolio. Created by Jehuda Rapha Putra Hermantan.</p>
     </footer>
     <script src="assets/javascript/index.js"></script>
 </body>
