--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>Contact Me</h2>
                 <p>You can contact me through:</p>
                 <ul>
-                    <li>Email: <a href="mailto:jehudarapha653@email.com">jehudarapha653@email.com</a></li>
+                    <li>Email: <a href="mailto:jehudarapha653@email.com">jehudarapha653@gmail.com</a></li>
                     <li>Telepon: <a href="https://api.whatsapp.com/send?phone=6281278915745"> +62 812-7891-5745</a></li>
                 </ul>
             </section>
